package edu.fiuba.algo3.modelo.Movimiento;

public class Abajo implements IMovimiento {

    public Abajo() {};

    public int x() { return 0;}

    public int y() { return -1;}
}
