package edu.fiuba.algo3.modelo.Movimiento;

public class Arriba implements IMovimiento {

    public Arriba() {};

    public int x() { return 0;}

    public int y() { return 1;}
}
