package edu.fiuba.algo3.modelo.Movimiento;

public class Derecha implements Movimiento  {
    public Derecha() {};
    public int x() { return 1;}
    public int y() { return 0;}
}
