package edu.fiuba.algo3.modelo.Movimiento;

public interface IMovimiento {
    public int x();
    public int y();
}
