package edu.fiuba.algo3.modelo.Movimiento;

public class Izquierda implements IMovimiento {

    public Izquierda() {};

    public int x() { return -1;}

    public int y() { return 0;}
}
