package edu.fiuba.algo3.modelo.Vehiculos;

import edu.fiuba.algo3.modelo.Chocables.IChocable;

public class Auto implements IVehiculo {

    @Override
    public int chocar(IChocable chocable) {
        return chocable.obtenerPuntosDePenalizacion(this);
    }
}
