package edu.fiuba.algo3.modelo.Vehiculos;

import edu.fiuba.algo3.modelo.Chocables.IChocable;

public interface IVehiculo {
    int chocar(IChocable chocable);
}
