@startuml

class Jugador {
    - penalizaciones : int
    - cantidadMovimientos : int
    + Jugador(posInicial, vehiculo) 
    + puntaje() : int
    + posicion() : Posicion
    + mover(movimiento, escenario)
}

interface IMovimiento {
    + x() : int
    + y() : int
}

class Derecha {
    + x() : int
    + y() : int
}
class Arriba {
    + x() : int
    + y() : int
}
class Abajo {
    + x() : int
    + y() : int
}
class Izquierda {
    + x() : int
    + y() : int
}

class Escenario {
    - alto : int
    - ancho : int
    - chocables : IChocable
    + Escenario(alturaInicial, anchuraInicial) 
    + insertarChocable(chocable, posicion)
    + obtenerChocable(posicion) : IChocable
    + estaDentroDelEscenario(posicion) : Bool
}

class Posicion {
    - x : int
    - y : int
    + x() : int
    + y() : int
    + Posicion(x, y)
    + equals(otraPosicion) : bool
    + moverseDesdePosicionInicial(movimiento)
}

class Pozo {
    +  obtenerPuntosDePenalizacion(moto) : int
    +  obtenerPuntosDePenalizacion(auto) : int
    +  obtenerPuntosDePenalizacion(todoterreno) : int
}

class Vacio {
    +  obtenerPuntosDePenalizacion(moto) : int
    +  obtenerPuntosDePenalizacion(auto) : int
    +  obtenerPuntosDePenalizacion(todoterreno) : int
}

class Piquete { 
    +  obtenerPuntosDePenalizacion(moto) : int
    +  obtenerPuntosDePenalizacion(auto) : int
    +  obtenerPuntosDePenalizacion(todoterreno) : int
}

class Auto {
    + chocar(chocable) : int
}

class Moto {
    + chocar(chocable) : int
}

class Todoterreno {
    - pozosEncontrados : int
    + chocar(chocable) : int
}

interface IVehiculo {
    + chocar(chocable) : int
}

interface IChocable {
    + obtenerPuntosDePenalizacion(moto) : int
    + obtenerPuntosDePenalizacion(auto) : int
    + obtenerPuntosDePenalizacion(todoterreno) : int
}

Jugador -> IVehiculo
IMovimiento <. Jugador

IVehiculo <|.. Auto
IVehiculo <|.. Moto
IVehiculo <|.. Todoterreno

IChocable <|.. Pozo
IChocable <|.. Vacio
IChocable <|.. Piquete

IMovimiento <|.. Arriba
IMovimiento <|.. Abajo
IMovimiento <|.. Derecha
IMovimiento <|.. Izquierda

Jugador --> Posicion
Jugador .> Escenario

Escenario --> IChocable
Escenario ..> Posicion
IMovimiento <.. Posicion
IVehiculo ..> IChocable

@enduml